WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289651
[css-grid] Spelling Fix
https://bugs.webkit.org/show_bug.cgi?id=289651
Summary
[css-grid] Spelling Fix
Brandon
Reported
2025-03-12 16:04:10 PDT
Misspelled "conent"; should be "content".
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-12 16:04:20 PDT
<
rdar://problem/146897068
>
Brandon
Comment 2
2025-03-12 16:07:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42355
EWS
Comment 3
2025-03-12 17:55:49 PDT
Committed
292049@main
(cf88671bc80b): <
https://commits.webkit.org/292049@main
> Reviewed commits have been landed. Closing PR #42355 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug